# newsnack-pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  EC2_DOCKER_SETUP.md  MANIFEST.in  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: deploy.yml  validate-dags.yml
dags/: content_generation_dag.py  issue_clustering_dag.py  news_collection_dag.py
sql/: data.sql  init_schema.sql  schema.sql
src/collector/: rss_parser.py  sources.yaml
src/database/: connection.py  models.py
src/newsnack_etl/: __init__.py
src/newsnack_etl/collector/: __init__.py  rss_parser.py  sources.yaml
src/newsnack_etl/common/: enums.py
src/newsnack_etl/database/: __init__.py  models.py
src/newsnack_etl/processor/: __init__.py  clusterer.py
src/newsnack_etl/repository/: __init__.py  article_repository.py  issue_repository.py
src/processor/: clusterer.py
