[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "newsnack-etl"
version = "0.1.0"
description = "뉴스 수집 및 이슈 클러스터링 ETL 시스템"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "newsnack"}
]
# newsnack_etl 패키지 자체의 의존성 (pip install -e . 시 자동 설치)
dependencies = [
    "feedparser==6.0.12",
    "scikit-learn==1.4.2",
    "scipy==1.11.4",
    "numpy==1.26.4",
    "psycopg2-binary",
    "python-dotenv",
    "requests",
    "SQLAlchemy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
